# scp-memory-core

./: .gitignore  Dockerfile  Quick_Stater_Guide.md  README.md  pyproject.toml
.github/workflows/: ci.yml
blog_series/: 01-why-agents-need-a-memory-layer.md  02-trust-as-a-first-class-signal.md  03-explainable-hybrid-retrieval.md  04-memory-lifecycle.md  05-calibrate-before-you-sophisticate.md  06-hermetic-by-default-pluggable-at-scale.md  07-governing-agent-memory.md  README.md
console/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
console/src/: App.tsx  main.tsx
console/src/api/: client.ts  metrics.ts  mutations.ts  queries.ts
console/src/components/: Badge.tsx  PageHead.tsx  ScoreBar.tsx  Sidebar.tsx  States.tsx
console/src/screens/: Benchmarks.tsx  Dashboard.tsx  MemoryDetail.tsx  MemoryExplorer.tsx  RetrievalInspector.tsx  Settings.tsx  TrustExplorer.tsx
console/src/state/: settings.tsx
console/src/test/: components.test.tsx  (+1 more)
deploy/observability/: README.md  docker-compose.yml
docs/: phase-1-memory-core.md  phase-2-memory-intelligence.md  phase-3-hybrid-retrieval.md  phase-4-trust-layer.md  phase-5-sdks.md  phase-6-observability.md  phase-7-admin-console.md
documents/: 00-project-analysis.md  01-artifact-inventory.md  02-pareto-ranking.md  03-the-80-20-artifact-set.md  04-engineering-thesis.md  05-architecture-document.md  06-adr-collection.md  07-readme-positioning.md  08-benchmark-report.md  09-principal-engineer-case-study.md  10-blog-series-plan.md  11-demo-and-examples-pack.md  12-talk-and-presentation-deck.md  13-future-roadmap.md  14-reusable-asset-catalog.md  15-career-leverage-analysis.md  16-startup-leverage-analysis.md  17-30-day-execution-plan.md  README.md  golden-examples.json
evals/: __init__.py  calibration.py  loader.py  retrieval_quality.py  run_retrieval_benchmark.py  run_trust_calibration.py
evals/datasets/: retrieval_eval.json  trust_eval.json
examples/: intelligence_quickstart.py  quickstart.py  retrieval_quickstart.py  sdk_quickstart.py  trust_quickstart.py
project-memory-bank/: 00-project-charter.md  01-product-vision.md  02-product-thesis.md  03-system-architecture.md  04-domain-model.md  05-engineering-principles.md  06-technical-decisions.md  07-current-state.md  08-active-phase.md  09-backlog.md  10-api-contracts.md  11-data-models.md  12-memory-model.md  13-retrieval-model.md  14-ranking-model.md  15-trust-model.md  16-security-model.md  17-observability-model.md  18-testing-strategy.md  19-ui-design-system.md  20-release-plan.md  21-benchmark-results.md  22-competitive-analysis.md  23-roadmap.md  24-known-risks.md  25-adr-log.md  26-public-artifacts.md  27-active-initiatives.md  28-session-handoff.md  29-api-contracts.md  Publish_Guide.md  README.md  android-app-system-prompt.md
sdks/python/: README.md  pyproject.toml
sdks/python/src/scp_memory_sdk/: __init__.py  _http.py  client.py  errors.py  models.py
sdks/python/src/scp_memory_sdk/resources/: __init__.py  intelligence.py  memories.py  retrieval.py  trust.py
sdks/typescript/: README.md  package-lock.json  package.json  tsconfig.json
seed/: README.md  seed_golden_examples.py
src/scp_memory/: __init__.py  __main__.py  config.py  logging_config.py  metrics.py
tests/: conftest.py
tests/benchmark/: test_crud_benchmark.py
tests/integration/: test_intelligence_api.py  test_keyword_backend.py  test_memories_api.py  test_observability_api.py  test_postgres.py  test_python_sdk.py  test_qdrant.py  test_retrieval_api.py  test_trust_api.py
tests/unit/: test_audit_service.py  test_consolidation_service.py  test_decay_service.py  test_dedup_service.py  test_embedder_factory.py  test_embedding.py  test_fusion.py  test_importance_service.py  test_keyword.py  test_logging_config.py  test_memory_service.py  test_observability_assets.py  test_relation.py  test_retrieval_quality.py  test_retrieval_service.py  test_scoring.py  test_similarity.py  test_spans.py  test_tracing.py  test_trust_calibration.py  test_trust_service.py  test_trust_signals.py
(+82 files in other folders)
