[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scp-memory-core"
version = "0.1.0"
description = "SCP Memory Engine — the memory infrastructure layer for AI systems (Phase 1: Memory Core)."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "sqlalchemy>=2.0",
  "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
  "ruff>=0.4",
  "black>=24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/scp_memory"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "benchmark: latency/throughput seed measurements (opt-in via -m benchmark).",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection markers are designed to be called in defaults.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Header"]

[tool.black]
line-length = 100
target-version = ["py311"]
