[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scp-memory-sdk"
version = "0.5.0"
description = "Official Python client for the SCP Memory Engine (CRUD, intelligence, retrieval, trust)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/scp_memory_sdk"]
